[package]
name = "nacos-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
serde_json = "1.0"
colored_json = "3.0.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
cli-table = "0.4.7"
shlex = "1.1.0"
regex = "1.6.0"
urlencoding = "2.1.2"
rustyline = "10.0.0"
rustyline-derive = "0.7.0"
